# cv-samples

./: .dockerignore  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  cv-samples.logo  dev.sh  docker-compose.yml  index.html
libdmotservices/: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  NOTES.md  README.md  gen-version.py  libdmotservices.logo
libdmotservices/c/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md
libdmotservices/c/linux/: CMakeLists.txt  Makefile  NOTES.md  README.md  libdmotservices.logo
libdmotservices/c/linux/examples/: README.md  ex_signals.c  ex_time.c  ex_timex.c  ex_ui.c
libdmotservices/c/linux/img/: README.md
libdmotservices/c/linux/include/: README.md
libdmotservices/c/linux/src/: README.md
libdmotservices/c/linux/src/math/: math.c  (+3 more)
libdmotservices/c/linux/tests/: README.md  test_log.c  test_math.c  test_mathx.c  test_ringbuf.c  test_signals.c  test_string.c  test_version.c
libdmotservices/java/: CMakeLists.txt  Makefile  NOTES.md  README.md  build.xml  log4j2.xml  pom.xml  pom.xml.tpl
libdmotservices/java/dmot-core/: NOTES.md  README.md  build.xml  pom.xml  pom.xml.tpl
libdmotservices/java/dmot-servlet-javax/: NOTES.md  README.md  build.xml  pom.xml  pom.xml.tpl
libdmotservices/java/examples/net/: APIClientExample.java  APIClientExample.sh
libdmotservices/java/tools/: README.md  VersionManager.java
libdmotservices/js/: .eslintrc.json  CMakeLists.txt  Makefile  README.md  package-lock.json  package.json
libdmotservices/js/src/: 00-banner.js  exports.js  formdata.js  logger.js
libdmotservices/js/tests/: formdata.test.js  logger.test.js
libdmotservices/python/: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
libdmotservices/python/libdmotservices/: __init__.py  args.py  string.py
libdmotservices/python/tests/: README.md  conftest.py  test_args.py  test_string.py
pkixwebadm/: .env.example  .gitignore  CMakeLists.txt  Dockerfile  Makefile  NOTES.md  README.md  package-lock.json  package.json  pkixwebadm.logo  pkixwebadm.py  pyproject.toml
pkixwebadm/api/: openapi.yaml
pkixwebadm/pkixwebadm/: README.md  __init__.py  __main__.py  app.py  cli.py  config.py  logging.py
pkixwebadm/pkixwebadm/security/: README.md  __init__.py  credentials.py  identity.py
pkixwebadm/pkixwebadm/security/auth/: README.md  __init__.py  auth_manager.py  constants.py  credentials.py  session.py  user.py
pkixwebadm/pkixwebadm/web/: README.md  __init__.py
pkixwebadm/pkixwebadm/web/static/: README.md
pkixwebadm/pkixwebadm/web/templates/: README.md  ROOT.html  base.html  login.html
pkixwebadm/pkixwebadm/web/views/: README.md  auth.py  root.py
pkixwebadm/scripts/: README.md  gen_pw.py
pkixwebadm/tests/: README.md  conftest.py  test_auth.py  test_config.py  test_credentials.py  test_crypto.py  test_http.py  test_identity.py  test_libdmotservices.py
slideshow-server/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  NOTES.md  README.md  run-demo.sh  slideshow-server.css  slideshow-server.html  slideshow-server.js  slideshow-server.logo  slideshow-server.py
slideshow-server/img/: README.md
slideshow-server/publicdomainpictures.net/: README.md
slideshow-server/slideshow_server/: README.md  __init__.py  __main__.py  cli.py  media.py  server.py
slideshow-server/tests/: README.md  test_media.py  test_server.py  test_slideshow_server.py
txrxcli/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md
txrxcli/docs/: README.md  protocol.md  security.md
txrxcli/linux/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md
txrxcli/linux/include/: README.md  ansi.hpp  protocol.hpp  txrxcli.hpp
txrxcli/linux/include/client/: README.md  client.hpp
txrxcli/linux/include/server/: README.md  server.hpp
txrxcli/linux/src/: README.md  main.cpp  protocol.cpp
txrxcli/linux/src/client/: README.md  client.cpp
txrxcli/linux/src/server/: README.md  server.cpp
txrxcli/linux/tests/: README.md  protocol_tests.cpp
txrxcli/windows/: .gitattributes  .gitignore  CMakeLists.txt  Makefile  NOTES.md  README.md
txrxcli/windows/client-csharp/: README.md
txrxcli/windows/server-csharp/: README.md
txrxcli/windows/txrxcli-dotnet/: txrxcli-dotnet.csproj
txrxcli/windows/txrxcli-dotnet/Properties/: AssemblyInfo.cs
txrxcli/windows/txrxcli-dotnet/src/: Client.cs  Common.cs  ProcessRunner.cs  Program.cs  Protocol.cs  Server.cs
txrxcli/windows/txrxcli-dotnet/tests/: ProcessRunnerTests.cs  ProtocolTests.cs  txrxcli-dotnet.Tests.csproj
wifiequ/: .gitignore  CMakeLists.txt  Dockerfile  Makefile  NOTES.md  README.md  gen-version.py  package-lock.json  package.json  wifiequ.logo
wifiequ/api/: NOTES.md  README.md  openapi.yaml
wifiequ/api/img/: README.md
wifiequ/docs/: README.md
wifiequ/docs/api/: README.md  index.html
wifiequ/linux/: ARCHITECTURE.md  CMakeLists.txt  Makefile  NOTES.md  README.md
wifiequ/linux/etc/: README.md  wifiequd.conf
wifiequ/linux/etc/systemd/: README.md
wifiequ/linux/examples/: README.md  ex_wlanscan.c
wifiequ/linux/img/: README.md
wifiequ/linux/include/: README.md  wifiequd.h
wifiequ/linux/include/wfq/: README.md  config.h  mocksignal.h  version.h  wifiequ.h  wifisignal.h  wlanscan.h
wifiequ/linux/include/wfqapi/: README.md  http.h  json.h  router.h
wifiequ/linux/src/: README.md  mocksignal.c  wifiequd.c  wifisignal.c
wifiequ/linux/src/config/: config.c
wifiequ/linux/src/mock/: mocksignal.c
wifiequ/linux/src/wfq/: README.md  wifiequd.c
wifiequ/linux/src/wfqapi/: README.md  http.c  json.c  router.c
wifiequ/linux/src/wlan/: wifisignal.c  wlanscan.c
wifiequ/linux/tests/: README.md  test_sample_stream.c  test_version.c
wifiequ/web-angular/: Dockerfile  NOTES.md  README.md  nginx.conf
wifiequ/web-angular/docker/: entrypoint-frontend.sh
wifiequ/web-angular/wifiequ-frontend/: README.md  angular.json  frontend-starter.sh  package-lock.json  package.json  proxy-dev.conf.json
wifiequ/web-angular/wifiequ-frontend/src/: index.html  styles.scss
wifiequ/windows/: NOTES.md  README.md
(+306 files in other folders)
