[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "libdmotservices"
version = "0.3.0"
description = "Multilingual utility helpers (Python slice)"
authors = [{name = "dentonescu"}]
dependencies = []
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["libdmotservices*"]
exclude = ["vendor*"]

[tool.setuptools.package-data]
libdmotservices = [".version"]
